refactor bd script